# FiFoCUDA

./: CMakeLists.txt
include/: engine_loader.h  inference.h  utils.h
src/: engine_loader.cpp  inference.cu  inference.h  main.cpp  utils.cpp  utils.h
